trunk/Archive2/c5/ed2fd7a1b267e7/output
main.cpp:9:2: error: expected ';' after struct
}
 ^
 ;
main.cpp:14:12: error: use of undeclared identifier 'std'
    static std::mutex mutex;
           ^
main.cpp:15:5: error: use of undeclared identifier 'std'
    std::unique_lock<std::mutex> lock(mutex, std::try_to_lock);
    ^
main.cpp:15:22: error: use of undeclared identifier 'std'
    std::unique_lock<std::mutex> lock(mutex, std::try_to_lock);
                     ^
main.cpp:18:10: error: use of undeclared identifier 'lock'
    if (!lock)
         ^
main.cpp:21:5: error: expected expression
    static bool first = true;    
    ^
main.cpp:24:9: error: use of undeclared identifier 'first'
    if (first) {
        ^
main.cpp:25:9: error: use of undeclared identifier 'first'
        first = false;
        ^
8 errors generated.
